k8s-ymls/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: k8s-app-deployment

spec:
 replicas: 2
 selector:
  matchLabels:
   app: py-k8s-app
 
 template:
   metadata:
    labels:
      app: py-k8s-app
   spec:
    containers:
       - name: py-k8s-app
         image: shrikant155/py-k8s-app:latest
         imagePullPolicy: Always
         ports:
          - containerPort: 5000
