k8s-ymls/dev/service.yml
apiVersion: v1
kind: Service
metadata:
 name: py-k8s-app-service
 namespace: dev
spec:
  type: NodePort
  selector:
   app: py-k8s-app
   
  ports:
    - protocol: TCP
      port:  5000
      targetPort: 5000
      nodePort: 30050
