k8s-ymls/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: py-k8s-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /

spec:
  ingressClassName: nginx
  rules:
    - host: pyapp.local
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: py-k8s-app-service  # must match servic file metadata.name
                port:
                  number: 5000
